# dubiousOS

./: .gitignore  Cargo.toml  README.md  assemble.sh  basic.dis  boot_sector.dis  kernel.dis  linker.ld  makefile  makefile_old  run.sh  x86_64-unknown-none.json
.cargo/: config.toml
src/: boot_sector.asm  gdt64.asm  kernel.rs  lib.rs  print_hex.asm  print_str_pm.asm  switch_to_long_mode.asm
src/boot/: boot_sector.asm  gdt.asm  switch_to_long_mode.asm  switch_to_pm.asm
src/boot/utils/: disk_load.asm  print_str.asm  print_str_pm.asm
src/drivers/: Cargo.toml
src/drivers/src/: disk.rs  lib.rs
src/kernel/: Cargo.toml  kernel.rs  mod.rs
src/kernel/memory_management/: bitmap_allocator.rs  heap_allocator.rs  mod.rs  virtual_memory_mapping.rs
src/kernel/screen_output/: print.rs
src/kernel/src/: main.rs
src/kernel/src/memory_management/: mod.rs
src/kernel/src/screen_output/: print.rs
src/utils/: disk_load.asm  print_str.asm  print_str_pm.asm
