[package]
name = "dubiousOS"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
opt-level = "s"  # Optimize for size
lto = true      # Enable Link Time Optimization
debug = false
codegen-units = 1

[dependencies]
spin = "0.9.8"
volatile = "0.2.6"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]
